# sfml_game

./: CMakeCache.txt  CMakeLists.txt  DEFINITIONS.hpp  Makefile  README.md  TODO.md  animationcomponent.cpp  animationcomponent.hpp  assetmanager.cpp  button.cpp  button.hpp  cmake_install.cmake  editorstate.cpp  engine  entity.cpp  entity.hpp  game.cpp  game.hpp  gamestate.cpp  gamestate.hpp  hitboxcomponent.hpp  inputmanager.cpp  inputmanager.hpp  main  main.cpp  mainmenustate.cpp  mainmenustate.hpp  movementcomponent.cpp  movementcomponent.hpp  particlesystem.cpp  particlesystem.hpp  pausemenu.cpp  pausemenu.hpp  player.cpp  player.hpp  settingsstate.cpp  settingsstate.hpp  splashstate.cpp  splashstate.hpp  state.cpp  (+2 more)
_config/: gamestate_keybinds.ini  window.ini
_include/: animationcomponent.hpp  button.hpp  editorstate.hpp  entity.hpp  game.hpp  gamestate.hpp  hitboxcomponent.hpp  level.hpp  mainmenustate.hpp  movementcomponent.hpp  pausemenu.hpp  settingsstate.hpp  state.hpp  tilemap.hpp
_src/: editorstate.cpp  entity.cpp  game.cpp  gamestate.cpp  hitboxcomponent.cpp  level.cpp  mainmenustate.cpp  player.cpp  settingsstate.cpp  state.cpp  tilemap.cpp
old_engine/: assetmanager.hpp  entity.cpp  entity.hpp  gamestate.cpp  inputmanager.cpp  inputmanager.hpp  main  mainmenustate.cpp  mainmenustate.hpp  player.hpp  splashstate.cpp  splashstate.hpp  state.hpp  statemachine.cpp  statemachine.hpp
